14/Oct/1999: 
  - VBR fix
  - Layer2 and Layer1 added
           