@@ -2,3 +2,7 @@
   - VBR fix
   - Layer2 and Layer1 added
            
+21/Nov/2003: (by Marcus Overhagen)
+  - modified for usage with OpenBeOS
+  - removed global variable struct mpstr *gmp
+  - moved initialization into separate function
